# ai-music-gen-saas

./: .gitmodules  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
frontend/: next.config.js  package.json  pnpm-lock.yaml
frontend/prisma/: schema.prisma
frontend/src/: env.js
frontend/src/actions/: generation.ts  song.ts
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/(main)/create/: page.tsx
frontend/src/components/: create.tsx
frontend/src/components/create/: song-panel.tsx  track-list.tsx
frontend/src/components/sidebar/: sidebar-menu-items.tsx  upgrade.tsx
frontend/src/inngest/: functions.ts
frontend/src/lib/: auth.ts
prisma/: schema.prisma
src/: env.js
src/app/(auth)/: layout.tsx
src/app/(main)/: page.tsx
