[project]
name = "ai-music-gen-backend"
version = "0.1.0"
description = "Backend for AI Music Generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.35.1",
    "modal>=1.1.4",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = []
